src/styles/global.css
@layer scalar-base, base, scalar-theme, starlight, theme, components, utilities, scalar-client;

@import "@astrojs/starlight-tailwind";
@import "tailwindcss/theme.css" layer(theme);
@import "tailwindcss/preflight.css" layer(base);
@import "tailwindcss/utilities.css" layer(utilities);

@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

/* Required due to Algolia DocSearch bug: https://github.com/algolia/docsearch/issues/2243 */
@media (max-width: 768px) {
  .DocSearch-Container {
    position: fixed !important;
  }
}

.sl-markdown-content {
  font-size: var(--sl-text-base);
}

:root[data-theme="light"],
[data-theme="light"] ::backdrop {
  --sl-color-bg-nav: var(--sl-color-bg);
}

@media (min-width: 1536px) {
  :root {
    --sl-content-width: 56rem;
  }
}

:root {
  --sl-color-bg-nav: var(--sl-color-bg);
  --sl-color-bg-sidebar: transparent;

  --global-radius: 2px;

  --color-link-breadcrumbs: var(--sl-color-text-accent);

  --docsearch-searchbox-shadow: inset 0 0 0 1px var(--docsearch-primary-color);

  --text-scale: 1;

  --sl-text-xs: clamp(0.88rem, -0.18vi + 0.92rem, 0.78rem);
  --sl-text-sm: clamp(0.94rem, 0vi + 0.94rem, 0.94rem);
  --sl-text-base: clamp(1rem, 0.23vi + 0.94rem, 1.13rem);
  --sl-text-lg: clamp(1.07rem, 0.51vi + 0.94rem, 1.35rem);
  --sl-text-xl: clamp(1.14rem, 0.88vi + 0.92rem, 1.62rem);
  --sl-text-2xl: clamp(1.21rem, 1.33vi + 0.88rem, 1.94rem);
  --sl-text-3xl: clamp(1.3rem, 1.88vi + 0.82rem, 2.33rem);
  --sl-text-4xl: clamp(1.38rem, 2.58vi + 0.74rem, 2.8rem);
  --sl-text-5xl: clamp(1.48rem, 3.42vi + 0.62rem, 3.36rem);
}

/* Dark mode colors. */
:root {
  --sl-color-accent-low: #062833;
  --sl-color-accent: #007592;
  --sl-color-accent-high: hsl(180, 72%, 82%);
  --sl-color-white: #ffffff;
  --sl-color-gray-1: #eceef2;
  --sl-color-gray-2: #c6c8ce;
  --sl-color-gray-3: #a0a4ae;
  --sl-color-gray-4: #545861;
  --sl-color-gray-5: #353841;
  --sl-color-gray-6: #24272f;
  --sl-color-black: #0b1418;

  --sl-color-orange-low: hsl(var(--sl-hue-orange), 39%, 15%);
  --sl-color-green-low: hsl(var(--sl-hue-green), 39%, 15%);
  --sl-color-blue-low: hsl(var(--sl-hue-blue), 54%, 18%);
  --sl-color-purple-low: hsl(var(--sl-hue-purple), 39%, 15%);
  --sl-color-red-low: hsl(var(--sl-hue-red), 39%, 15%);
}
/* Light mode colors. */
:root[data-theme="light"] {
  --sl-color-accent-low: #caf1f7;
  --sl-color-accent: #00b6c2;
  --sl-color-accent-high: #00525e;
  --sl-color-white: #17181c;
  --sl-color-gray-1: #24272f;
  --sl-color-gray-2: #353841;
  --sl-color-gray-3: #545861;
  --sl-color-gray-4: #888b96;
  --sl-color-gray-5: #c0c2c7;
  --sl-color-gray-6: #eceef2;
  --sl-color-gray-7: #f5f6f8;
  --sl-color-black: #ffffff;

  --sl-color-orange-low: hsl(var(--sl-hue-orange), 90%, 90%);
  --sl-color-green-low: hsl(var(--sl-hue-green), 85%, 92%);
  --sl-color-blue-low: hsl(var(--sl-hue-blue), 88%, 94%);
  --sl-color-purple-low: hsl(var(--sl-hue-purple), 80%, 94%);
  --sl-color-red-low: hsl(var(--sl-hue-red), 80%, 94%);
}

@theme {
  --font-sans: var(--font-atkinson-hyperlegible-next);
}

html {
  scroll-behavior: smooth;
}

.sidebar-pane {
  border-right: 1px solid var(--sl-color-hairline);
  .sidebar-content {
    padding: 0;
  }
}

.sidebar-content ul ul li {
  border-inline-start: 1px solid var(--sl-color-hairline);
}

.sidebar-content ul li a {
  display: flex;
}

.sidebar-content ul li a[aria-current="page"] {
  background-color: var(--sl-color-text-invert);
  color: var(--sl-color-text-accent);
}

.sidebar-content ul li a:not([aria-current="page"]):hover {
  background-color: color-mix(in srgb, var(--sl-color-text-invert) 35%, transparent);
}

.sidebar-content .large:hover {
  color: var(--sl-color-gray-1);
}

header {
  border-bottom: 1px solid var(--sl-color-hairline) !important;
}

.sidebar-content .sl-badge {
  align-items: center;
  display: flex;
  font-size: xx-small !important;
  align-self: flex-start;
  text-wrap: nowrap;
}

.sidebar-content details ul li a {
  display: flex;
  justify-content: space-between;
  border-radius: var(--global-radius);
}

.pagination-links > a {
  border-radius: var(--global-radius);
}

header site-search button {
  border-radius: var(--global-radius) !important;
}

@media (min-width: 50rem) {
  .DocSearch-Button {
    border-radius: var(--global-radius) !important;
  }
}

.DocSearch-Modal,
.DocSearch-Form,
.DocSearch-Hit a,
.DocSearch-Commands-Key {
  border-radius: var(--global-radius);
}

.DocSearch-Footer {
  border-radius: 0 0 var(--global-radius) var(--global-radius);
}

.sl-link-card {
  border-radius: var(--global-radius) !important;
  background: color-mix(in srgb, var(--sl-color-white) 1%, transparent);
  box-shadow: none;
  .description {
    font-size: var(--sl-text-sm);
  }
  &:hover {
    border-color: var(--sl-color-accent-high);
    background: var(--sl-color-gray-9);
  }
}

.group-label {
  text-transform: capitalize;
}

.sl-link-button {
  font-weight: 500;
}
.sl-link-button.primary {
  border-radius: var(--global-radius);
  border: none;
}

.sl-markdown-content a:not(:where(.not-content *)) {
  font-weight: 500;
  text-underline-offset: 4px;
  text-decoration-line: underline;
  text-decoration-thickness: 0.5px;
  color: var(--sl-color-gray-1);
  text-decoration-color: var(--sl-color-text-accent);
  &:hover {
    text-decoration-thickness: 2px;
  }
}

.sl-markdown-content :is(.sl-heading-wrapper.level-h2):not(:first-child) {
  margin-top: 1.75em;
}

.sl-link-card a {
  text-decoration: none;
}

.content-panel {
  padding: 2.5rem var(--sl-content-pad-x);
}

.tab {
  text-wrap: nowrap;
}

.sl-markdown-content :not(ul, ol) + :is(ul, ol):not(:where(.not-content *, .sl-steps)) {
  display: grid; /* helps with list markers alignment */
  margin-block: 0.75rem;
  margin-inline: 0;
  padding-inline-start: 1.5rem;
}

.sl-markdown-content :not(ul) + :is(ul):not(:where(.not-content *, .sl-steps)) {
  list-style-type: disc;
}

.sl-markdown-content :not(ol) + :is(ol):not(:where(.not-content *, .sl-steps)) {
  list-style-type: decimal;
}

code {
  border-radius: var(--global-radius);
}

.starlight-aside {
  border-radius: var(--global-radius);
}

.card .title code {
  font-size: inherit;
}

.site-title {
  color: var(--sl-color-white);
  gap: 0.75rem;
  font-size: var(--sl-text-xl);
}

.social-icons {
  a {
    color: var(--sl-color-gray-1);
  }
}

.toggle {
  border-radius: var(--global-radius);
}

astro-island[component-export="Faucet"] {
  display: block;
}

astro-island[component-export="GraphQLEditor"] {
  display: block;
  min-height: 500px;
}

@media (width < 80rem) {
  astro-island[component-export="GraphQLEditor"] {
    min-height: 720px;
  }
}

.sl-markdown-content code:not(:where(.not-content *)) {
  border: 1px solid color-mix(in srgb, var(--sl-color-gray-5), transparent 25%);
  background: var(--sl-color-gray-6);
  padding: 0.15rem 0.4rem;
}

/* API Reference Overrides */
.content-panel {
  .panel {
    background-color: transparent;
  }
  details {
    padding: 0;
    border: 0;
  }
  .key {
    .name {
      min-width: 50%;
    }
  }
}

.expressive-code {
  .frame {
    --header-border-radius: var(--global-radius) !important;
    .header {
      border-top-left-radius: var(--header-border-radius);
      border-top-right-radius: var(--header-border-radius);
    }
    pre {
      border-bottom-left-radius: var(--global-radius) !important;
      border-bottom-right-radius: var(--global-radius) !important;
    }
    .copy button {
      border-radius: var(--global-radius);
    }
  }
  .ec-section:is(.collapsible-start, .collapsible-end) {
    details {
      &[open] + .content-lines {
        background-color: var(--code-background) !important;
      }
      summary {
        background-color: transparent;
        .ec-line {
          opacity: 0.35;
          &:hover {
            opacity: 0.5;
          }
          .text {
            font-size: small;
          }
        }
      }
    }
  }
  .ec-section:is(.collapsible-start) {
    details {
      summary {
        border-bottom: 1px solid color-mix(in srgb, var(--sl-color-gray-4) 25%, transparent);
      }
    }
  }
  .ec-section:is(.collapsible-end) {
    details {
      summary {
        border-top: 1px solid color-mix(in srgb, var(--sl-color-gray-4) 25%, transparent);
      }
    }
  }
}

header.header {
  padding-top: 0;
  padding-bottom: 0;
  display: flex;
  > div {
    width: 100%;
  }
}

.DocSearch-Button {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  transform: translateX(0.5rem);
}

.DocSearch-Search-Icon {
  width: auto;
  height: auto;
}

@media (min-width: 50rem) {
  .DocSearch-Button:hover {
    border-color: var(--docsearch-primary-color);
  }
}

.DocSearch-Form {
  box-shadow: none;
}

.DocSearch-Form:focus-within {
  box-shadow: var(--docsearch-searchbox-shadow);
}

.hero {
  h1,
  .tagline {
    text-wrap: balance;
  }
}
@media (width < 40rem) {
  .hero {
    > img,
    > .hero-html {
      width: min(40%, 20rem);
    }
    .actions {
      flex-direction: column;
      align-items: center;
    }
  }
}

.mobile-preferences {
  padding: 1rem var(--sl-sidebar-pad-x);
}

[data-has-hero] .sl-container {
  max-width: 100%;
}

[data-has-hero] .sl-markdown-content,
.hero {
  max-width: 72rem;
  margin-inline: auto;
}

.starlight-aside {
  border: 1px solid var(--sl-color-asides-border);
}

